[CHNCY-017] Fix flashcard resizing (#42)
* [CHNCY-017] Fixed scrollbar repositioning issues

* [CHNCY-017] Made flashcards padding cleaner

* [CHNCY-017] Fixed flashcard resizing with small answers

* [CHNCY-017] Gave answer container min height

--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,7 @@ pre {
   font-size: 20px;
   line-height: 40px;
  }
+
+ html {
+   overflow-y: scroll;
+ }
